--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: ruby
+before_install:
+  - gem update --system
+  - gem --version
 rvm:
- - 1.9.3
- - 2.0.0
- - rbx-nightly-19mode
+  - 1.9.3
+  - 2.0.0
+  - rbx-nightly-19mode
