--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: ruby
 rvm:
-  - 1.9.3
-  - 2.0.0
+  - 2.0
+  - 2.1
+  - 2.2
   - jruby-19mode
+  - rbx-2
+env: "RUBY_THREAD_VM_STACK_SIZE=2097152 _JAVA_OPTIONS=-Xss8m"
+script: "ruby bin/shen_test_suite.rb"
